# shift_report

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  prod-compose.yml  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: README.md  USER_GUIDE.md
shift_report/: backends.py  decorators.py
shift_report/admin/: __init__.py
shift_report/admin/models/: __init__.py  deviation.py  deviation_entry.py  employee.py  pa_blank.py  pa_record.py  pa_template.py  product.py  sector.py  shift.py  taken_measure.py  workplace.py  workshop.py
shift_report/forms/: __init__.py  auth.py  blanks.py
shift_report/management/commands/: create_test_data.py  create_test_users.py  load_initial_data.py  setup_demo_data.py
shift_report/middleware/: __init__.py
shift_report/migrations/: 0001_initial.py  0002_deviationgroup_product_shift_deviationreason_and_more.py  0003_pablank_parecord_deviationentry_patemplate_and_more.py
shift_report/models/: __init__.py  deviation.py  deviation_entry.py  employee.py  pa_blank.py  pa_record.py  pa_template.py  product.py  sector.py  shift.py  taken_measure.py  workplace.py  workshop.py
shift_report/services/: __init__.py  analytics.py  blank_generator.py  import_export.py
shift_report/templatetags/: role_tags.py
shift_report/urls/: __init__.py  admin_urls.py  analytics.py  auth.py  blanks.py  master.py  operator.py
shift_report/views/: __init__.py  admin_views.py  analytics.py  auth.py  blanks.py  master.py  operator.py
(+26 files in other folders)
