[project]
name = "shift-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.9",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "pre-commit>=4.5.1",
    "psycopg2-binary>=2.9",
]

[tool.flake8]
exclude = """
    .venv,
    **/migrations/**,
"""
max-line-length = 120
